# zero_trace

./: .gitignore  Cargo.toml  wipe_cert_5b39387d-1fbe-4040-acae-328641ec0630.json  wipe_cert_5d753bf6-8be5-48cf-8eb5-c34128564537.json
src/: cert.rs  drive_detect.rs  main.rs  main_dummy.rs  os_detect.rs  wipe.rs
