[package]
name = "zero_trace"
version = "0.1.0"
edition = "2024"

[dependencies]
os_info = "3.7"   # latest stable as of now
sysinfo = "0.30"  # or newer, for disk detection
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
ed25519-dalek = "1.0.1"
rand = "0.7"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

